@@ -84,6 +84,8 @@ Minor Changes:
  * Paranoid objects now see nospoof messages for their emits. [MG]
  * ANSI is now ignored when checking the length of channel titles. Suggested
    by Paige. [MG]
+ * @decompile with a <prefix> now shows cmds for setting attribute flags.
+   @decompile/tf still omits cmds for attr flags. [MG]
 
 Fixes:
  * Fixing list type autodetect. [GM]
